--- a/loginPage.html
+++ b/loginPage.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Convos Login Page</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid #f1f1f1;}
+
 
 h2 {
     display: block;
@@ -27,9 +30,10 @@ input[type=text], input[type=password] {
 
 button {
   background-color:aqua;
+  align-items: center;  
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 16px 10px;
   border: none;
   cursor: pointer;
   width: 100%;
@@ -82,24 +86,29 @@ span.psw {
 </head>
 <body>
 
-<h2>Login</h2>
+<h2>Convos Login</h2>
 
-<form action="/action_page.php" method="post">
+
+
+<form action="file:///Users/coltencisler/CS370/CS370/homePage.html" method="post">
   <div class="imgcontainer">
     <img src="/Users/coltencisler/CS370/61457.png" alt="Avatar" class="avatar">
   </div>
 
   <div class="container">
     <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <input type="text" placeholder="Enter Username" name="uname">
+    <!-- <input type="text" placeholder="Enter Username" name="uname" required> -->
+    <!-- will have to be replaced-->
+
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw">
         
-    <button type="submit">Login</button>
-    <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
-    </label>
+    <a href="/Users/coltencisler/CS370/CS370/loginPage.html">
+      <button type="submit">Login</button>
+    </a>
+
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
