edits to last commit

--- a/homePage.html
+++ b/homePage.html
@@ -85,6 +85,7 @@ body {
   background-color: #aaa;
   width: 100%;
   padding: 20px;
+  margin: 3%;
 }
 
 /* Footer */
@@ -136,7 +137,10 @@ body {
   </div>
   <div class="main">
     <h2>Assignments</h2>
-    <div class="fakeimg" style="height:200px;">Build a nuclear power plant</div>
+    <div class="fakeimg" style="height:150px;">Build a nuclear power plant</div>
+    <div class="fakeimg" style="height:150px;">Figure out if jet fuel can melt steel beams</div>
+    <div class="fakeimg" style="height:150px;">Split an atom and see what happens</div>
+
     
     <p>Some text..</p>
   </div>
