--- a/homePage.html
+++ b/homePage.html
@@ -40,7 +40,7 @@ body {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 20px;
+  padding: 14px 35px;
   text-decoration: none;
 }
 
@@ -119,9 +119,9 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="#">Home</a>
+  <a href="#">Classes</a>
+  <a href="#">Help</a>
   <a href="#" class="right">Link</a>
 </div>
 
