--- a/loginPage.html
+++ b/loginPage.html
@@ -1,121 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>Convos Login Page</title>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1;}
-
-
-h2 {
-    display: block;
-    font-size: 3.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
-
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-button {
-  background-color:aqua;
-  align-items: center;  
-  color: white;
-  padding: 14px 20px;
-  margin: 16px 10px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color:hotpink;
-}
-
-.imgcontainer {
-  text-align: center;
-  margin-top: 3%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 50%;
-  width: 50%;
-}
-
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
-.container {
-  padding: 20px;
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-}
-</style>
+    <title>Convos Home Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="loginPage.css">
 </head>
+
 <body>
 
-<h2>Convos Login</h2>
+        <div class="header">
+            <h1>Convos</h1>
+            <p>Where the academically gifted stand out.</p>
+        </div>
 
-
-
-<form action="file:///Users/coltencisler/CS370/CS370/homePage.html" method="post">
-  <div class="imgcontainer">
-    <img src="/Users/coltencisler/CS370/61457.png" alt="Avatar" class="avatar">
-  </div>
-
-  <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname">
-    <!-- <input type="text" placeholder="Enter Username" name="uname" required> -->
-    <!-- will have to be replaced-->
-
-
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw">
-        
-    <a href="/Users/coltencisler/CS370/CS370/loginPage.html">
-      <button type="submit">Login</button>
-    </a>
-
-  </div>
-
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
-</form>
+        <div class="navbar">
+            <a href="#">Home</a>
+            <a href="#">Classes</a>
+            <a href="#">Help</a>
+            <a href="homepage.html" class="right">Home</a>
+        </div>
+        <div class="content">
+        <div class="loginForm">
+            <form action="login.php" method="post">
+                <label for="username">Username:</label>
+                <input type="text" name="username" id="username" />
+                <br /><br>
+                <label for="password">Password:</label>
+                <input type="password" name="password" id="password" />
+                <br /> <br><br>
+                <img src="/captcha" alt="CAPTCHA" />
+                <br />
+                <label for="captcha">Enter the text above:</label>
+                <input type="text" name="captcha" id="captcha" />
+                <br /><br>
+                <input type="submit" id="submit" value="Log in" />
+            </form>
+        </div>
+    </div>
 
 </body>
+
 </html>
