--- a/loginPage.html
+++ b/loginPage.html
@@ -5,6 +5,7 @@
     <title>Convos Home Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="loginPage.css">
 </head>
@@ -26,17 +27,11 @@
         <div class="loginForm">
             <form action="login.php" method="post">
                 <label for="username">Username:</label>
-                <input type="text" name="username" id="username" />
-                <br /><br>
+                <input type="text" id="username" name="username">
                 <label for="password">Password:</label>
-                <input type="password" name="password" id="password" />
-                <br /> <br><br>
-                <img src="/captcha" alt="CAPTCHA" />
-                <br />
-                <label for="captcha">Enter the text above:</label>
-                <input type="text" name="captcha" id="captcha" />
-                <br /><br>
-                <input type="submit" id="submit" value="Log in" />
+                <input type="password" id="password" name="password">
+                <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+                <input type="submit" value="Log in">
             </form>
         </div>
     </div>
