--- a/recaptcha.html
+++ b/recaptcha.html
@@ -1,4 +1,7 @@
 <form method="post" action="submit.php">
-  <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+  <script src='https://www.google.com/recaptcha/api.js'></script>
+  <div class="g-recaptcha" data-sitekey="6LfTChAkAAAAAJxSxfk5VnU1-epZF4VAPFtsf9qS"></div>
   <input type="submit" value="Submit">
 </form>
+
+//6LfTChAkAAAAAJxSxfk5VnU1-epZF4VAPFtsf9qS is the site key for local host
